Update how to run