@@ -1,2 +1,6 @@
 # Marrakech-Board-Game
 Showcase of the board game Marrakech developed by Java and JavaFX as a course group project.
+
+## How to run?
+    path_to_java\corretto-17.0.12\bin\java.exe --module-path path_to_fx\javafx-sdk-17.0.12\lib --add-modules javafx.controls,javafx.fxml -Dfile.encoding=GBK -jar showcase.jar
+
